Clase8/Ejemplo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-app
  namespace: so1-clase8
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: node-app
  type: NodePort
